<?xml version="1.0" encoding="UTF-8"?>
<!-- ~ /** ~ Copyright 2011 Baptiste Wicht & Frédéric Bapst ~ ~ Licensed 
	under the Apache License, Version 2.0 (the "License"); ~ you may not use 
	this file except in compliance with the License. ~ You may obtain a copy 
	of the License at ~ ~ http://www.apache.org/licenses/LICENSE-2.0 ~ ~ Unless 
	required by applicable law or agreed to in writing, software ~ distributed 
	under the License is distributed on an "AS IS" BASIS, ~ WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. ~ See the License for 
	the specific language governing permissions and ~ limitations under the License. 
	~ **/ -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.cojac</groupId>
	<artifactId>cojac</artifactId>
	<version>1.5.1</version>
	<name>COJAC</name>
	<description>a tool that leverages in new ways the arithmetic capabilities of the Java programming language.</description>
	<url>https://github.com/Cojac/</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>

				<configuration>
				      <excludes>
                        <exclude>**/demo/*</exclude>
                      </excludes>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>com.github.cojac.Cojac</mainClass>
						</manifest>
						<manifestEntries>
							<addClasspath>true</addClasspath>
							<Premain-Class>com.github.cojac.CojacAgent</Premain-Class>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
                    <finalName>cojac</finalName>
                    <attach>false</attach>
					<appendAssemblyId>false</appendAssemblyId>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>com.github.cojac.Cojac</mainClass>
						</manifest>
						<manifestEntries>
							<addClasspath>true</addClasspath>
							<Premain-Class>com.github.cojac.CojacAgent</Premain-Class>
							<Boot-Class-Path>cojac.jar</Boot-Class-Path>
							<Class-Path>cojac.jar</Class-Path>
						</manifestEntries>
					</archive>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M1</version>
				<configuration>
					<excludes>
						<exclude>com/github/cojac/unit/Tests.java</exclude>
						<exclude>com/github/cojac/poly/PolyTest.java</exclude>
					</excludes>
					<argLine>-javaagent:"${basedir}/src/test/resources/cojac-agent-test.jar"</argLine>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <reuseForks>false</reuseForks>
                    <forkCount>1</forkCount>
  				</configuration>
					
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>

				<configuration>
					<source>1.9</source>
					<target>1.9</target>
				</configuration>
			</plugin>
		</plugins>
		
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<targetJdk>1.8</targetJdk>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.5</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.1.2</version>
			</plugin>
		</plugins>
	</reporting>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>findbugs-maven-plugin</artifactId>
			<version>3.0.5</version>
			<type>maven-plugin</type>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-pmd-plugin -->
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-pmd-plugin</artifactId>
			<version>3.14.0</version>
		</dependency>

		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.2</version>
		</dependency>

		<!-- System dependencies for benchmarks -->

		<dependency>
			<groupId>com.wicht.benchmark.utils</groupId>
			<artifactId>bb</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/benchmark-utils/bb.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.wicht.benchmark.utils</groupId>
			<artifactId>benchmark-utils</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${basedir}/benchmark-utils/benchmark-utils.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.wicht.benchmark.utils</groupId>
			<artifactId>jcommon</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/benchmark-utils/jcommon-1.0.16.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.wicht.benchmark.utils</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${basedir}/benchmark-utils/jfreechart-1.0.13.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.wicht.benchmark.utils</groupId>
			<artifactId>jsci-core</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${basedir}/benchmark-utils/jsci-core.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.wicht.benchmark.utils</groupId>
			<artifactId>mt-13.jar</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${basedir}/benchmark-utils/mt-13.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm</artifactId>
			<version>9.1</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-commons</artifactId>
			<version>9.1</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-tree</artifactId>
			<version>9.1</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-analysis</artifactId>
			<version>9.1</version>
		</dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-util</artifactId>
			<version>9.1</version>
        </dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
	</dependencies>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>org.ow2.asm</id>
			<url>http://repository.ow2.org/nexus/</url>
		</repository>
	</repositories>
</project>
